--- a/app/src/main/res/layout/list_news.xml
+++ b/app/src/main/res/layout/list_news.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="132dp"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:layout_editor_absoluteX="1dp"
     app:cardCornerRadius="8dp"
@@ -10,7 +10,7 @@
     app:cardPreventCornerOverlap="true"
     app:cardUseCompatPadding="true">
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:padding="14dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -18,31 +18,55 @@
         android:alpha="0.8">
 
         <ImageView
-            android:contentDescription="@string/news_image"
             android:id="@+id/list_news_photo"
-            android:layout_width="104dp"
-            android:layout_height="104dp"
-            android:layout_marginEnd="16dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"/>
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/list_news_inform"
-            android:layout_toEndOf="@id/list_news_photo"
-            android:layout_alignParentTop="true"
-            android:textSize="18sp"
-            android:text="@string/abstract_lorem"
+            android:id="@+id/list_news_title"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:ellipsize="end"
+            android:fontFamily="@font/maven_pro_medium"
+            android:maxWidth="250dp"
+            android:singleLine="true"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/list_news_photo"
+            app:layout_constraintTop_toTopOf="@+id/list_news_photo" />
+
+        <TextView
+            android:id="@+id/list_news_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="5dp"
+            android:fontFamily="@font/maven_pro_medium"
+            android:maxWidth="200dp"
+            android:maxLines="4"
+            android:textSize="18sp"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/list_news_photo"
+            app:layout_constraintTop_toBottomOf="@+id/list_news_title" />
 
         <Button
             android:id="@+id/list_news_details"
             android:layout_width="98dp"
             android:layout_height="36dp"
-            android:text="@string/news_button"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"/>
+            android:layout_alignParentBottom="true"
+            android:text="@string/more_button"
+            android:layout_marginTop="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/list_news_description" />
 
-    </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
